--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,8 +6,10 @@
       <div>
         <h1 class="text-2xl font-bold text-gray-800 dark:text-white">My Bookshelf</h1>
         <p class="text-gray-500 dark:text-gray-400">Your personal collection of books</p>
-      </div>
+          <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+      </div>  
       <div class="flex items-center space-x-4">
+        
         <%= link_to search_form_books_path, class: "p-2 rounded-lg bg-white dark:bg-gray-800 shadow-sm hover:shadow transition block" do %>
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500 dark:text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
