bookmark logic, generated devise views

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,9 +36,9 @@
                 </svg>
               <% end %>
               <!-- Progress Indicator -->
-              <div class="absolute bottom-0 left-0 right-0 h-1.5 bg-gray-200 dark:bg-gray-700">
+              <!-- <div class="absolute bottom-0 left-0 right-0 h-1.5 bg-gray-200 dark:bg-gray-700">
                 <div class="h-full bg-gradient-to-r from-indigo-400 to-purple-500" style="width: <%= book.progress_percentage(current_user) %>%"></div>
-              </div>
+              </div> -->
             </div>
 
             <!-- Book Details -->
