--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -109,9 +109,9 @@
       </div>
       
       <!-- Save Settings Button -->
-      <button id="save-settings" class="mt-auto bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded text-sm transition">
+      <!-- <button id="save-settings" class="mt-auto bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded text-sm transition">
         Save Settings
-      </button>
+      </button> -->
     </div>
     <% end %>
     <div class="flex-1 <%= 'pl-64' if user_signed_in? %>"> <!-- padding-left matches sidebar width -->
