--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
         <div class="flex-1">
           <p class="text-sm font-medium"><%= message %></p>
         </div>
-        <button type="button" class="ml-4 -mr-2 p-1 rounded-md inline-flex text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-1 focus:ring-indigo-400">
+        <button type="button" class="ml-4 -mr-2 p-1 rounded-md inline-flex text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-1 focus:ring-indigo-400" data-action="click->flash#dismiss" data-flash-target="closeButton">
           <span class="sr-only">Dismiss</span>
           <svg class="h-4 w-4" fill="currentColor" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"/>
