--- a/app/views/vocabularies/index.html.erb
+++ b/app/views/vocabularies/index.html.erb
@@ -8,7 +8,7 @@
               
           <p class="text-gray-500 dark:text-gray-400">Your personal collection of words</p>
       </div> 
-        
+         <div class="flex space-x-2">
         <%= link_to search_form_vocabularies_path, class: "p-2 rounded-lg bg-white dark:bg-gray-800 shadow-sm hover:shadow transition block" do %>
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500 dark:text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -19,6 +19,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z" />
           </svg>
         </button>
+      </div>
       </div>
 
   
@@ -40,11 +41,19 @@
             🔊
           </button>
         </h4>
-        
+
           <div class="flex justify-between items-center">
           <p class="text-gray-700 dark:text-gray-300 flex-grow">
              
           <%= vocabulary.definition %>
+          <button 
+            type="button" 
+            class="ml-2 p-1 rounded bg-indigo-500 text-white hover:bg-indigo-600" 
+            onclick="speakWord('<%= j vocabulary.definition %>')"
+            aria-label="Read word aloud"
+          >
+            🔊
+          </button>
           </p>
           <%= button_to vocabulary_path(vocabulary), method: :delete, data: { confirm: "Are you sure?" }, class: "text-red-500 hover:text-red-700 ml-4" do %>
           <i class="fas fa-trash text-2xl" style="color: #ef4444;"></i>
