--- a/app/views/vocabularies/show.html.erb
+++ b/app/views/vocabularies/show.html.erb
@@ -9,8 +9,7 @@
 
  
     <% end %>
+<br>
+<%= link_to "Back to Search", search_form_vocabularies_path, 
+  class: "inline-block px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition" %>
 
-
-
-
-<%= link_to "Back to Search", search_form_vocabularies_path %>
