--- a/app/views/vocabularies/search_form.html.erb
+++ b/app/views/vocabularies/search_form.html.erb
@@ -1,5 +1,5 @@
 <div class="flex items-start justify-center min-h-screen pt-16 px-4 sm:px-6"> <!-- Changed items-center to items-start and added pt-16 -->
-  <div class="bg-white dark:bg-gray-800 p-6 sm:p-8 rounded-xl shadow-sm hover:shadow-md transition-all duration-300 max-w-md w-full border border-gray-200 dark:border-gray-700 mx-auto mt-10"> <!-- Added mt-8 -->
+  <div class="bg-white dark:bg-gray-800 p-6 sm:p-8 rounded-xl shadow-sm hover:shadow-md transition-all duration-300 max-w-md w-full border border-gray-200 dark:border-gray-700 mx-auto mt-10">
     <%= form_with url: search_vocabularies_path, method: :get, local: true, class: "space-y-5" do |form| %>
       <div>
         <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-1">Word Lookup</h2>
