--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,15 +9,13 @@
       </div>
       <div class="flex items-center space-x-4">
         <%= link_to search_form_books_path, class: "p-2 rounded-lg bg-white dark:bg-gray-800 shadow-sm hover:shadow transition block" do %>
+        <div title="Search Books">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500 dark:text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
           </svg>
+          </div>
+          
         <% end %>
-        <button class="p-2 rounded-lg bg-white dark:bg-gray-800 shadow-sm hover:shadow transition">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-500 dark:text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z" />
-          </svg>
-        </button>
         <%= button_to destroy_user_session_path, method: :delete, class: "cursor-pointer flex items-center space-x-2 p-2 rounded-lg bg-white dark:bg-gray-800 shadow-sm hover:shadow transition text-gray-700 dark:text-gray-300 hover:text-rose-600 dark:hover:text-rose-400" do %>
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
